--- a/src/app.html
+++ b/src/app.html
@@ -8,5 +8,14 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<script>
+			if (typeof global === 'undefined') {
+				var global = window;
+			}
+	
+			if (typeof process === 'undefined') {
+				var process = { env: { NODE_ENV: 'production' } };
+			}
+		</script>
 	</body>
 </html>
